Bug fixed: Logo not showing

--- a/public/css/admin/Adminheader.css
+++ b/public/css/admin/Adminheader.css
@@ -2,14 +2,13 @@
 .navbar {
     display: flex;
     justify-content: space-between;
+    align-items: center;
     padding: 5px;
     flex-direction: row-reverse;
     background-color: lightgray;
     position: sticky;
     top: 0;
     z-index: 100;
-
-
 }
 
 html, body {
@@ -21,9 +20,8 @@ html, body {
 }
 
 .navbar .logo {
-    height: 50px;
-
-
+    width: auto;
+    height: 80px;
 }
 
 .nav__links {
@@ -31,7 +29,7 @@ html, body {
     list-style: none;
     display: flex;
     gap: 10px;
-    flex-direction: row-reverse;
+
 }
 
 .nav__links a {
